# deadlock-rpc

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  game_state.rs  hero_api.rs  launcher.rs  log_watcher.rs  logger.rs  main.rs  process_guard.rs  process_watcher.rs  steam.rs  tray.rs  updater.rs
