[package]
name = "deadlock-rpc"
version = "0.1.0"
edition = "2021"
description = "Discord Rich Presence for the Valve game Deadlock"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dependencies]
discord-rich-presence = "1.1"
regex = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
serde = { version = "1", features = ["derive"] }
